<resources>
    <string name="app_name">MyApp</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="username_holder">Username</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="title_holder">Title</string>
    <string name="description_holder">Description</string>

    <string name="button_follow">Follow</string>
    <string name="button_followers">Followers</string>
    <string name="button_likes">Likes</string>
    <string name="button_take_profile_pic">Take new profile picture</string>
    <string name="button_like">Like</string>
    <string name="button_comment">Comment</string>

</resources>
