<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yousiftouma.myapp.UserProfileFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="7">

        <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:id="@+id/profile_pic_view"
            android:layout_width="140dp"
            android:layout_height="180dp"
            android:layout_gravity="fill"
            android:layout_rowSpan="4"
            android:contentDescription="@string/profile_pic"
            android:src="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/button_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/button_follow" />

        <Button
            android:id="@+id/button_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/button_followers" />

        <Button
            android:id="@+id/button_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/button_likes" />

        <Button
            android:id="@+id/button_take_new_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/button_take_profile_pic" />

        <TextView
            android:id="@+id/profile_username_view"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/username_holder" />


        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="6" />


    </GridLayout>

</LinearLayout>
